Changelog
=========

0.5 - Unreleased
----------------

* Added buildout for project, so testing can be done using ``bin/test``.

* Added ability to register utilities with an absolute path. These
  utilities are returned wrapped into their original context. This
  change is backward compatible to existing registries.

  But registering utilities having an acquisition context will behave
  different because these utilities will be returned in their original
  context. To restore the previous behavior, register utilities
  unwrapped (aq_base).


0.4 - 2008-07-23
----------------

* Rewrite PersistentComponents.registeredUtilities to not use
  internal methods. This makes it compatible with both zope.component <3.5.0dev
  and >3.5.0dev.


0.3 - 2007-12-24
----------------

* Fixed potential aq problem when assigning various values to the utilities
  registry of the component registry.

0.2 - 2007-06-30
----------------

* Refactored and fixed aq wrapping: Nested site managers now return utilities
  wrapped in the right context. RequestContainers are removed and wrapped
  utilities are cached. This requires a special LookupClass called
  'FiveVerifyingAdapterLookup' in all 'utilities' registries used below a
  five.localsitemanager site.


0.1.2 - 2007-06-23
------------------

* Corrected the zip-safe flag to be False.


0.1.1 - 2007-03-05
------------------

* Fixed aq wrapping when looking up a utility that is actually the component
  registry's parent (the ISite).


0.1 (2007-02-27)
----------------

* Initial version
